# libraries_syllabus_notifications

./: .gitignore  Pipfile  app.py  cli.py  config.py  faculty.sql  gmail-demo.py  has_syllabus.py  mail-log.sh  missing-syllabi-report-to-csv.sh  notify.py  process-un-csv.py  pyproject.toml  readme.md  status.py  sync.sh  test.csv  test.py  update-usernames.py  usernames.py
app/: __init__.py  app.py  config.py  example.env  has_syllabus.py  notify.py  status.py  update-usernames.py  usernames.py
chairs_list/: cli.py  utils.py
reminders/: config.py  example.env  has_syllabus.py  map.py  notify.py  status.py  update-usernames.py  update_usernames.py  usernames.py
syllabus_notifications/: __init__.py  usernames.py
test/: __init__.py  test.py  test_has_syllabus.py  test_map.py  test_notify.py  test_term.py  test_usernames.py
