[project]
name = "syllabus-reminders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-storage==3.1.0",
    "openpyxl==3.1.5",
    "python-dotenv~=1.1",
]

[dependency-groups]
dev = [
    "coverage~=7.8",
    "pytest~=8.3",
]
