[project]
name = "syllabus-reminders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-storage==3.4.1",
    "openpyxl==3.1.5",
    "python-dotenv==1.2.1",
]

[dependency-groups]
dev = [
    "coverage==7.12.0",
    "pytest==8.4.2",
]
